# ab-lens

./: .gitignore  README.md  app.py  pyproject.toml
.hermes/plans/: 2026-06-04_hypothesis-refinement-loop.md
demo/: __init__.py  sample-design-context.json  scenarios.py
docs/: IMPLEMENTATION_STATUS.md
docs/design/: conceptualize-operationalize.md  diverse-carryover-guardrail.md  golden-set-regression.md  hypothesis-quality-scorecard.md  provider-prompting-diagnostic.md  scorecard-claude-final-r2.md  scorecard-claude-review-r1.md  scorecard-claude.md  (+9 more)
scripts/: debate_vs_single.py  provider_diagnostic.py  update_openrouter_models.py
src/: bias_pool.py  config.py  context_loop.py  design_rubric.py  design_schemas.py  design_stats.py  llm_client.py  llm_json.py  safety.py  schemas.py
tests/: __init__.py  test_bias_detector.py  test_bias_pool.py  test_bias_screener.py  test_classify.py  test_config.py  test_context_collector.py  test_context_loop.py  test_design_assembler.py  test_design_rubric.py  test_design_schemas.py  test_design_stats.py  test_diverse_generator.py  test_domain_intake.py  test_expander.py  test_golden_eval.py  test_golden_regression.py  test_hypothesis_pipeline.py  test_hypothesis_schemas.py  test_llm_client.py  test_llm_client_oauth.py  test_llm_json.py  test_measurement.py  test_metric_review.py  test_multi_model_debate.py  test_prompt_quality.py  test_provider_adapter.py  test_quality_loop.py  test_quality_scorecard.py  test_refinement_agent.py  test_scorer.py  test_sharpener.py  test_statistical.py  test_tab2_e2e.py  test_trivial_router.py
(+45 files in other folders)
