[project]
name = "ab-lens"
version = "0.1.0"
description = "A/B 테스트 결과를 AI가 분석하는 1페이지 브리핑 웹앱"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30",
    "openai>=1.30",
    "streamlit>=1.35",
    "pydantic>=2.0",
    "scipy>=1.11",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# golden: 실LLM 골든셋 회귀(느림/토큰 필요). 평소 제외, 수동 `pytest -m golden`.
addopts = "-m 'not golden'"
markers = [
    "golden: 실LLM 프롬프트 품질 골든셋 회귀 (CLAUDE_CODE_OAUTH_TOKEN 필요)",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
